--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,10 +45,10 @@ jobs:
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
       run: |
-        python movieservice\manage.py migrate
+        python manage.py migrate
 
     - name: Run tests
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
       run: |
-        python movieservice\manage.py test
+        python manage.py test
