--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,12 +42,14 @@ jobs:
         echo "DATABASE_PORT=5432" >> .env
 
     - name: Run migrations
+      working-directory: ./movieservice
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
       run: |
         python manage.py migrate
 
     - name: Run tests
+      working-directory: ./movieservice
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
       run: |
