--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        ls /movieservice
+        ls movieservice
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
