--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         ls movieservice
+        pwd
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
