--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,9 +31,10 @@ jobs:
     - name: Install dependencies
       run: |
         ls movieservice
-        pwd
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        cd movieservice
+        pwd
 
     - name: Set up Django environment variables
       run: |
@@ -47,7 +48,7 @@ jobs:
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
       run: |
-        python manage.py migrate
+        python movieservice/manage.py migrate
 
     - name: Run tests
       env:
