--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,11 +47,13 @@ jobs:
     - name: Run migrations
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
+        PYTHONPATH: ${{ github.workspace }}/movieservice
       run: |
         python movieservice/manage.py migrate
 
     - name: Run tests
       env:
         DJANGO_SETTINGS_MODULE: movieservice.settings
+        PYTHONPATH: ${{ github.workspace }}/movieservice
       run: |
         python movieservice/manage.py test
