--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,11 +30,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        ls movieservice
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        cd movieservice
-        pwd
 
     - name: Set up Django environment variables
       run: |
@@ -49,7 +46,6 @@ jobs:
         DJANGO_SETTINGS_MODULE: core.settings
       run: |
         cd movieservice
-        ls
         python manage.py migrate
 
     - name: Run tests
@@ -57,5 +53,4 @@ jobs:
         DJANGO_SETTINGS_MODULE: core.settings
       run: |
         cd movieservice
-        ls
-        python movieservice/manage.py test
+        python manage.py test
