--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,6 +30,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
           
   test:
+    needs: lint
     runs-on: ubuntu-latest
 
     services:
