update linter config update requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,13 @@
 [flake8]
 
-max-line-length = 88
+max-line-length = 120
+
 
 ignore =
     W291
 
-inline-quotes = "
+
+inline-quotes = """"
 
 max-complexity = 10
 
@@ -13,5 +15,5 @@ exclude =
     .git,
     __pycache__,
     migrations,
-    .github/workflows,
-    venv/
+    venv,
+    .venv
